# evalytics

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yaml  .travis.yml  Dockerfile  Dockerfile-client  GOOGLE_API_USAGE.md  Makefile  README.md  auth.py  client.Dockerfile  client.py  config.example.yaml  config.ini  config.ini.example  config.tests.yaml  config.yaml.example  conftest.py  docker-compose.yaml  evals_whitelist.csv  google_auth.py  pyproject.toml  server.Dockerfile  server.py  setup.py  setup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-ci.yml  python-tests.yml
doc/: 01-assignments-phase.md  02-eval-phase.md  README.md  processing-evals-phase.md
doc/eval-process/: README.md  form-creation.md
doc/google-apis/: usage.md
evalytics/: README.md  adapters.py  client.py  communications_channels.py  config.py  core.py  exceptions.py  filters.py  forms.py  google_api.py  handlers.py  main.py  mappers.py  models.py  server.py  storages.py  usecases.py
examples-google-api-client/: auth.py  quickstart_appscripts.py  quickstart_docs.py  quickstart_drive.py  quickstart_gmail.py  quickstart_sheets.py
requirements/: dev.txt  prod.txt
scripts/: setup.sh
server/: main.py  requirements.txt
tests/: test_adapters.py  test_client.py  test_communications_channels.py  test_config.py  test_core.py  test_filters.py  test_forms.py  test_google_api.py  test_handlers.py  test_mapper.py  test_models.py  test_storages.py  test_usecases.py
(+73 files in other folders)
